<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.web0zz.givemeamovie.view.ui.detail.WatchListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/deep_black">

        <TextView
            android:id="@+id/add_to_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_to_list"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="18dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/close_adding_to_list"
            app:layout_constraintBottom_toBottomOf="@+id/add_to_list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_to_list_title"
            app:srcCompat="@drawable/unlike_icon" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="#8FD6D6D6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_to_list_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/watchLists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:adapterWatchListLine="@{vm.availableLists}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="#8FD6D6D6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/watchLists" />

        <Button
            android:id="@+id/add_new_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/add_new_watchlist"
            android:textColor="@color/light_gray"
            app:icon="@drawable/add_icon"
            app:iconTint="@color/light_gray"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <EditText
            android:id="@+id/new_list_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/add_new_watchlist"
            android:textColorHint="@color/light_gray"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:autofillHints="@string/add_new_watchlist"
            android:inputType="text" />

        <Button
            android:id="@+id/adding_new_list"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_new_watchlist"
            android:textColor="@color/light_yellow"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_list_name_edittext" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>