<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.detail.DetailFragment">

    <data>
        <import type="com.web0zz.givemeamovie.data.remote.Network"/>

        <variable
            name="vm"
            type="com.web0zz.givemeamovie.view.ui.detail.DetailViewModel" />

        <variable
            name="adapter"
            type="com.web0zz.givemeamovie.view.adapter.CastListAdapter" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deep_black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backPoster"
                LoadImage="@{Network.getBackdropURL(vm.movieDetail.backdrop_path)}"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_centerHorizontal="true"
                android:alpha="0.8"
                android:scaleType="centerCrop"
                tools:src="@drawable/backw500"
                android:background="@drawable/movie_gradient_overlay"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/backPoster"
                android:translationY="-20dp"
                android:src="@drawable/detail_background"
                android:contentDescription="@string/detail_shape" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_path"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/backPoster"
                android:layout_alignParentBottom="true"
                android:translationY="-90dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/poster_cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/movie_poster"
                        LoadImage="@{Network.getPosterURL(vm.movieDetail.poster_path)}"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        tools:src="@drawable/w500poster" />
                </androidx.cardview.widget.CardView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="5sp"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:typeface="normal"
                    app:Genres="@{vm.movieDetail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/separator2"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title"
                    tools:text="Action, Adventure, Fantasy" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/separator2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/space2"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:typeface="normal"
                    app:layout_constraintStart_toEndOf="@+id/movie_runtime"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="12sp"
                    tools:text="120 min"
                    MovieRuntime="@{vm.movieDetail}"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:typeface="normal"
                    app:layout_constraintStart_toEndOf="@+id/separator1"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="76dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-black"
                    android:lineSpacingExtra="12sp"
                    android:text="@{vm.movieDetail.component10()}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/poster_cardView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Fear of Rain" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="12sp"
                    tools:text="2017"
                    ReleaseDate="@{vm.movieDetail}"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:typeface="normal"
                    app:layout_constraintStart_toEndOf="@+id/poster_cardView"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/separator1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/space1"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    android:typeface="normal"
                    app:layout_constraintStart_toEndOf="@+id/movie_release_date"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/poster_cardView" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-light"
                    tools:text="When the crew of a space junk collector ship called The Victory discovers a humanoid robot named Dorothy that\'s known to be a weapon of mass destruction, they get involved in a risky business deal which puts their lives at stake."
                    android:text="@{vm.movieDetail.component11()}"
                    android:textColor="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview_title" />

                <TextView
                    android:id="@+id/cast_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/cast"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

                <TextView
                    android:id="@+id/similar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/similar"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cast_recyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_recyclerView"
                    adapterCastList="@{vm.movieCast.component1()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cast_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similar_recyclerView"
                    adapterMovieList="@{vm.similarMovies.component2()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/similar_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>